--- a/front-end/frontEnd/src/app/app.component.html
+++ b/front-end/frontEnd/src/app/app.component.html
@@ -1,37 +1,4 @@
 <app-header></app-header>
-<!-- <app-home-body></app-home-body> -->
-<!-- <app-search-result></app-search-result> -->
-<form
-  action=""
-  #medicineForm="ngForm"
-  (ngSubmit)="onMedicineCreate(medicineForm.value)"
->
-  <label for="">medicine</label>
-  <input type="text" name="Mname" ngModel />
-
-  <label for="">type</label>
-  <input type="text" name="desc" ngModel />
-
-  <label for="">price </label>
-  <input type="text" name="price" ngModel />
-
-  <input type="submit" value="submit medicine" />
-</form>
-
-<table>
-  <thead>
-    <tr>
-      <th>name</th>
-      <th>price</th>
-      <th>pharmacy</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>ibuprofine</td>
-      <td>antipain</td>
-      <td>20</td>
-    </tr>
-  </tbody>
-</table>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
+
