--- a/front-end/frontEnd/src/app/header/header.component.css
+++ b/front-end/frontEnd/src/app/header/header.component.css
@@ -1,23 +1,58 @@
+
+* {
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .header{
-    background-color:rgba(28, 130, 173,0.5);
-    margin: 0;
-    display: flex;
-    flex-direction: column;
+  background-color:rgba(0, 0, 0, 0.158);
+}
+.nav1:hover{
+  color: rgba(11, 53, 100, 0.685);
+
+}
+a {
+  color: black;
+  text-decoration: none;
+}
+li {
+  list-style: none;
+}
+input {
+  outline: none;
+  border: none;
 }
 
-.header h1{
-    margin: 0;
+.active > a {
+  font-weight: bold;
 }
 
-a{
-    text-decoration: none;
-    color: black;
+.basic-flex {
+  display: flex;
+  align-items: center;
+}
+.Nav__wrapper {
+  width: 100%;
+  position: static;
+  top: 0;
+  justify-content: space-between;
+  padding: 5px 50px;
+  box-shadow: 0px 0px 4px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 5px;
+  height: 65px;
+}
+.Nav__wrapper-logo img {
+  width: 60px;
+}
+
+.unCollapsed > li {
+  display: inline;
+  margin: 1rem;
+  font-weight: 400;
+  font-size: 1.1rem;
 }
 
 
-.header ul {
-    display: flex;
-    justify-content: space-around;
-    height: 30px;
-    align-items: center;
-}
+
