--- a/front-end/frontEnd/src/app/home-body/home-body.component.css
+++ b/front-end/frontEnd/src/app/home-body/home-body.component.css
@@ -3,48 +3,181 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 20% 0;
+    margin-top: 1rem;
 
 }
 
 .container img{
     width: 25%;
 }
-
-.container input{
-    
-    position: relative;
-    display: inline-flex;
-    font-size: 20px;
-    box-sizing: border-box;
-    transition: 0.5s ;
+.input-group{
+  margin-bottom: 60px;
 }
 
-.container input[type="text"]{
-    background: #fff;
-    width: 75%;
-    height: 50px;
-    border: 1px solid black;
-    border-width: 1px 0 1px 1px;
-    outline: none;
-    padding: 0 25px;
-    border-radius:25px 0 0 25px;
-    text-align: center;
-    
-
-
+.news__section-rightside{
+  width: 100%;
+  height:60% ;
+  box-shadow: 0 0 6px 6px rgba(6, 77, 6, 0.1);
+  background-color: rgba(0, 0, 0, 0.178);
+  margin: 4.25rem auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+  padding: 10px 0 10px 40px;
+  border-radius: 50px;
 
 }
 
-.container input[type="submit"]{
-    
-    position: relative;
-    border-radius:0 25px 25px 0;
-    width: 25%;
-    height: 50px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    background-color: rgba(28, 130, 173,0.5);
-    
+.news__section-rightside {
+  width: 80%;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+}
+.Eacc__section-wrapper {
+  width: 70%;
+  margin: 0px auto 0 auto;
+}
+.Eacc-section{
+  padding: 3px;
+}
+.Eacc__section-wrapper .Eacc-header {
+  font-size: 2rem;
+  font-weight: 800;
+  text-align: center;
+  margin: 1.75rem auto;
+}
+.Eacc-description {
+  line-height: 1.4rem;
+  text-transform: lowercase;
+  text-align: justify;
+  font-weight: 500;
+  height: 220px;
+  position: relative;
+}
+
+.news__section-rightside::-webkit-scrollbar {
+  width: 12px;
+}
+.news__section-rightside::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: rgba(0, 0, 0, 1);
+}
+
+.news__section-rightside > img {
+  width: 350px;
+  height: 250px;
+  border-radius: 2rem;
+  margin-bottom: 1.5rem;
+}
+.list ul{
+  display: block;
+  padding: 1rem 0;
+
+}
+.list ul li{
+  font-size: 18px;
+  margin: 1rem auto;
+}
+.list{
+  background-color: rgba(0, 0, 0, 0.308);
+  width: 80%;
+  margin: auto;
+}
+.center{
+  font-size: 25px;
+  width: 80%;
+  margin:2rem auto;
+}
+.center0{
+  text-align: center;
+  font-size: 25px;
+
+  border: 2px solid black;
+  width: fit-content;
+  margin: 0  auto 4rem auto;
+  padding: 8px 20px  ;
+  background-color: rgba(0, 0, 0, 0.308);
+
+}
+.med{
+  font-size:25px;
+  margin: 2rem ;
+}
+form{
+  width: 40%;
+  margin: auto;
+}
+.button button{
+  background-color:rgba(0, 0, 0, 0.233);
+  text-align: center;
+  height: 100%;
+  border-radius: 5px;
+  width: 130px;
+}
+.Companies__section-wrapper {
+  width: 80%;
+  margin: 5rem auto;
+}
+.Companies-header {
+  font-size: 3.15rem;
+  text-align: center;
+}
+.Companies-title {
+  text-align: center;
+  font: 0.85rem;
+}
+.Companies-content-flex1 {
+  gap: 1.75rem;
+  /* flex-wrap: wrap;
+  justify-content: center;
+  align-items: center; */
+  margin-top: 2.5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+
+}
+.Company {
+  width: 220px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1);
+  padding: 5px 15px;
+}
+.Company img {
+  width: 100%;
+  margin: 0;
+}
+.Company span {
+  margin: 1rem auto;
+  font-weight: 500;
+}
+
+/*  ---- companies style ends here */
+
+/*  ---- Organizational structure style ends here */
+
+.OrgStructure__section-wrapper {
+  width: 80%;
+  margin: 3rem auto 4rem auto;
+}
+
+.OrgStructure__section-wrapper table {
+  margin-top: 1rem;
+  border-collapse: collapse;
+  width: 100%;
+}
+.OrgStructure__section-wrapper td,
+.OrgStructure__section-wrapper th {
+  border: 1px solid #9c9a9a;
+  text-align: left;
+  padding: 15px 5px;
+
 }
