--- a/front-end/frontEnd/src/app/home-body/home-body.component.html
+++ b/front-end/frontEnd/src/app/home-body/home-body.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-  <h1>Welcome to MedHub</h1>
+  <h1 class="firstpart">Welcome to MedHub</h1>
   <img
     src="https://t3.ftcdn.net/jpg/03/22/50/68/360_F_322506810_Y8h8m2grFEPrrvRdUZqHB5hrv2kfVLrt.jpg"
     alt="medicine image"
@@ -30,13 +30,7 @@
       These days, medicines come from a variety of sources. Many were developed from substances found in nature, and even today many are extracted from plants.
 
       Some medicines are made in labs by mixing together a number of chemicals. Others, like penicillin, are byproducts of organisms such as fungus. And a few are even biologically engineered by inserting genes into bacteria that make them produce the desired substance.
-
-
-
       </p>
-
-
-
   </div>
 </section>
 <section class="Eacc-section">
