--- a/front-end/frontEnd/src/app/about/about.component.css
+++ b/front-end/frontEnd/src/app/about/about.component.css
@@ -10,6 +10,7 @@
   font-weight: 800;
   text-align: center;
   margin: 1.75rem auto;
+  color: rgb(51, 189, 175);
 }
 .Eacc-description {
   line-height: 1.4rem;
@@ -18,12 +19,14 @@
   font-weight: 400;
   height: 220px;
   position: relative;
+  height: fit-content;
 }
 .servics{
   text-align: center;
   margin-top: 100px;
   font-size: 25px;
   font-weight: 400;
+  color:  rgb(51, 189, 175);
 }
 .visionMission__section-wrapper {
   width: 100%;
@@ -44,6 +47,15 @@
   width: 100%;
   margin: 0 auto;
   border-radius: 1.25rem;
+
+}
+.Companies-title{
+  margin-bottom: 50px;
+}
+.Company:hover{
+  transform: scale(1.07);
+  transition: 0.4s;
+
 }
 .vision-texts,
 .Mission-texts {
@@ -73,6 +85,7 @@
 .Companies-header {
   font-size: 3.15rem;
   text-align: center;
+  color:  rgb(51, 189, 175);
 }
 .Companies-title {
   text-align: center;
@@ -85,7 +98,7 @@
   align-items: center; */
   margin-top: 2.5rem;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr ;
 
 }
 .Company {
@@ -151,4 +164,42 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1.75rem;
+}
+@media only screen and (max-width: 550px){
+  .Companies-content-flex1 {
+    gap: 1.75rem;
+    margin-top: 2.5rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+    margin-left: 30%;
+
+
+  }
+  .visionMission__section-wrapper{
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 50vw;
+  }
+
+
+
+}
+
+@media only screen and (min-width: 551px) and (max-width: 860px){
+  .Companies-content-flex1 {
+    gap: 1.75rem;
+    margin-top: 2.5rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+
+  }
+  .visionMission__section-wrapper{
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 50vw;
+
+  }
+
 }
