--- a/front-end/frontEnd/src/app/header/header.component.html
+++ b/front-end/frontEnd/src/app/header/header.component.html
@@ -8,6 +8,7 @@
       <ul class="unCollapsed">
           <li><a class="nav1" routerLink="HomeBody">Home</a></li>
           <li><a class="nav1" routerLink="About">About</a></li>
+          <li><a class="nav1">Contact</a></li>
           <li><a class="nav1">Servics</a></li>
       </ul>
   </nav>
