--- a/front-end/frontEnd/src/app/home-body/home-body.component.css
+++ b/front-end/frontEnd/src/app/home-body/home-body.component.css
@@ -6,7 +6,9 @@
     margin-top: 1rem;
 
 }
-
+.firstpart{
+  color:rgb(51, 189, 175);
+}
 .container img{
     width: 25%;
 }
@@ -18,7 +20,7 @@
   width: 100%;
   height:60% ;
   box-shadow: 0 0 6px 6px rgba(6, 77, 6, 0.1);
-  background-color: rgba(0, 0, 0, 0.178);
+  background-color: rgb(51, 189, 175);
   margin: 4.25rem auto;
   display: flex;
   align-items: center;
@@ -39,16 +41,18 @@
 }
 .Eacc__section-wrapper {
   width: 70%;
-  margin: 0px auto 0 auto;
+  margin: 5px auto 5px auto;
 }
 .Eacc-section{
   padding: 3px;
+  margin: 5px auto 5px auto;
 }
 .Eacc__section-wrapper .Eacc-header {
   font-size: 2rem;
   font-weight: 800;
   text-align: center;
   margin: 1.75rem auto;
+  color: rgb(51, 189, 175);
 }
 .Eacc-description {
   line-height: 1.4rem;
@@ -57,10 +61,13 @@
   font-weight: 500;
   height: 220px;
   position: relative;
+
+  height: fit-content;
 }
 
 .news__section-rightside::-webkit-scrollbar {
   width: 12px;
+
 }
 .news__section-rightside::-webkit-scrollbar-thumb {
   border-radius: 5px;
@@ -74,36 +81,6 @@
   border-radius: 2rem;
   margin-bottom: 1.5rem;
 }
-.list ul{
-  display: block;
-  padding: 1rem 0;
-
-}
-.list ul li{
-  font-size: 18px;
-  margin: 1rem auto;
-}
-.list{
-  background-color: rgba(0, 0, 0, 0.308);
-  width: 80%;
-  margin: auto;
-}
-.center{
-  font-size: 25px;
-  width: 80%;
-  margin:2rem auto;
-}
-.center0{
-  text-align: center;
-  font-size: 25px;
-
-  border: 2px solid black;
-  width: fit-content;
-  margin: 0  auto 4rem auto;
-  padding: 8px 20px  ;
-  background-color: rgba(0, 0, 0, 0.308);
-
-}
 .med{
   font-size:25px;
   margin: 2rem ;
@@ -113,19 +90,27 @@ form{
   margin: auto;
 }
 .button button{
-  background-color:rgba(0, 0, 0, 0.233);
+  background-color:rgb(51, 189, 175);
   text-align: center;
   height: 100%;
   border-radius: 5px;
   width: 130px;
+}
+.Company:hover{
+  transform: scale(1.07);
+  transition: 0.4s;
+
 }
 .Companies__section-wrapper {
   width: 80%;
   margin: 5rem auto;
 }
 .Companies-header {
-  font-size: 3.15rem;
+  font-size: 2rem;
+  font-weight: 800;
   text-align: center;
+  margin: 1.75rem auto;
+  color: rgb(51, 189, 175);
 }
 .Companies-title {
   text-align: center;
@@ -133,9 +118,6 @@ form{
 }
 .Companies-content-flex1 {
   gap: 1.75rem;
-  /* flex-wrap: wrap;
-  justify-content: center;
-  align-items: center; */
   margin-top: 2.5rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -179,5 +161,29 @@ form{
   border: 1px solid #9c9a9a;
   text-align: left;
   padding: 15px 5px;
+
+}
+@media only screen and (max-width: 550px){
+  .Companies-content-flex1 {
+    gap: 1.75rem;
+    margin-top: 2.5rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+    margin-left: 30%;
+
+  }
+
+}
+
+@media only screen and (min-width: 551px) and (max-width: 860px){
+  .Companies-content-flex1 {
+    gap: 1.75rem;
+    margin-top: 2.5rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+
+  }
 
 }
