--- a/front-end/frontEnd/src/app/app.component.html
+++ b/front-end/frontEnd/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- <app-header></app-header>
 <!-- <app-home-body></app-home-body> -->
 <!-- <app-search-result></app-search-result> -->
-<!-- <form
+<form
   action=""
   #medicineForm="ngForm"
   (ngSubmit)="onMedicineCreate(medicineForm.value)"
@@ -33,7 +33,5 @@
       <td>20</td>
     </tr>
   </tbody>
-</table>-->
-<!-- <app-login></app-login> -->
-<app-search-result></app-search-result>
+</table>
 <router-outlet></router-outlet>
