--- a/front-end/frontEnd/src/app/app.component.html
+++ b/front-end/frontEnd/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- <app-header></app-header>
-<!-- <app-home-body></app-home-body> -->
-<!-- <app-search-result></app-search-result> -->
+
+ <app-search-result></app-search-result> -->
 <form
   action=""
   #medicineForm="ngForm"
@@ -34,4 +34,4 @@
     </tr>
   </tbody>
 </table>
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
