--- a/front-end/frontEnd/src/app/home-body/home-body.component.css
+++ b/front-end/frontEnd/src/app/home-body/home-body.component.css
@@ -3,187 +3,48 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 1rem;
+    margin: 20% 0;
 
 }
-.firstpart{
-  color:rgb(51, 189, 175);
-}
+
 .container img{
     width: 25%;
 }
-.input-group{
-  margin-bottom: 60px;
+
+.container input{
+    
+    position: relative;
+    display: inline-flex;
+    font-size: 20px;
+    box-sizing: border-box;
+    transition: 0.5s ;
 }
 
-.news__section-rightside{
-  width: 100%;
-  height:60% ;
-  box-shadow: 0 0 6px 6px rgba(6, 77, 6, 0.1);
-  background-color: rgb(51, 189, 175);
-  margin: 4.25rem auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 3rem;
-  padding: 10px 0 10px 40px;
-  border-radius: 50px;
-
-}
-
-.news__section-rightside {
-  width: 80%;
-  overflow-x: scroll;
-  overflow-y: hidden;
-  display: flex;
-  align-items: center;
-  gap: 3rem;
-}
-.Eacc__section-wrapper {
-  width: 70%;
-  margin: 5px auto 5px auto;
-}
-.Eacc-section{
-  padding: 3px;
-  margin: 5px auto 5px auto;
-}
-.Eacc__section-wrapper .Eacc-header {
-  font-size: 2rem;
-  font-weight: 800;
-  text-align: center;
-  margin: 1.75rem auto;
-  color: rgb(51, 189, 175);
-}
-.Eacc-description {
-  line-height: 1.4rem;
-  text-transform: lowercase;
-  text-align: justify;
-  font-weight: 500;
-  height: 220px;
-  position: relative;
-
-  height: fit-content;
-}
-
-.news__section-rightside::-webkit-scrollbar {
-  width: 12px;
-
-}
-.news__section-rightside::-webkit-scrollbar-thumb {
-  border-radius: 5px;
-  background-color: rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: rgba(0, 0, 0, 1);
-}
-
-.news__section-rightside > img {
-  width: 350px;
-  height: 250px;
-  border-radius: 2rem;
-  margin-bottom: 1.5rem;
-}
-.med{
-  font-size:25px;
-  margin: 2rem ;
-}
-form{
-  width: 40%;
-  margin: auto;
-}
-.button button{
-  background-color:rgb(51, 189, 175);
-  text-align: center;
-  height: 100%;
-  border-radius: 5px;
-  width: 130px;
-}
-.Company:hover{
-  transform: scale(1.07);
-  transition: 0.4s;
-
-}
-.Companies__section-wrapper {
-  width: 80%;
-  margin: 5rem auto;
-}
-.Companies-header {
-  font-size: 2rem;
-  font-weight: 800;
-  text-align: center;
-  margin: 1.75rem auto;
-  color: rgb(51, 189, 175);
-}
-.Companies-title {
-  text-align: center;
-  font: 0.85rem;
-}
-.Companies-content-flex1 {
-  gap: 1.75rem;
-  margin-top: 2.5rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-
-}
-.Company {
-  width: 220px;
-  height: 300px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1);
-  padding: 5px 15px;
-}
-.Company img {
-  width: 100%;
-  margin: 0;
-}
-.Company span {
-  margin: 1rem auto;
-  font-weight: 500;
-}
-
-/*  ---- companies style ends here */
-
-/*  ---- Organizational structure style ends here */
-
-.OrgStructure__section-wrapper {
-  width: 80%;
-  margin: 3rem auto 4rem auto;
-}
-
-.OrgStructure__section-wrapper table {
-  margin-top: 1rem;
-  border-collapse: collapse;
-  width: 100%;
-}
-.OrgStructure__section-wrapper td,
-.OrgStructure__section-wrapper th {
-  border: 1px solid #9c9a9a;
-  text-align: left;
-  padding: 15px 5px;
-
-}
-@media only screen and (max-width: 550px){
-  .Companies-content-flex1 {
-    gap: 1.75rem;
-    margin-top: 2.5rem;
-    display: grid;
-    grid-template-columns: 1fr;
+.container input[type="text"]{
+    background: #fff;
+    width: 75%;
+    height: 50px;
+    border: 1px solid black;
+    border-width: 1px 0 1px 1px;
+    outline: none;
+    padding: 0 25px;
+    border-radius:25px 0 0 25px;
     text-align: center;
-    margin-left: 30%;
+    
 
-  }
+
 
 }
 
-@media only screen and (min-width: 551px) and (max-width: 860px){
-  .Companies-content-flex1 {
-    gap: 1.75rem;
-    margin-top: 2.5rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-
-
-  }
-
+.container input[type="submit"]{
+    
+    position: relative;
+    border-radius:0 25px 25px 0;
+    width: 25%;
+    height: 50px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background-color: rgba(28, 130, 173,0.5);
+    
 }
