--- a/front-end/frontEnd/src/app/header/header.component.html
+++ b/front-end/frontEnd/src/app/header/header.component.html
@@ -1,15 +1,12 @@
-
-<header class="header">
-
-  <nav id="nav" class="Nav__wrapper basic-flex">
-      <div class="Nav__wrapper-logo">
-        <h1>Medhub</h1>
-      </div>
-      <ul class="unCollapsed">
-          <li><a class="nav1" routerLink="HomeBody">Home</a></li>
-          <li><a class="nav1" routerLink="About">About</a></li>
-          <li><a class="nav1">Contact</a></li>
-          <li><a class="nav1">Servics</a></li>
-      </ul>
-  </nav>
-</header>
+<div class="header">
+  <h1>medHub</h1>
+  <div class="navBar">
+    <ul>
+      <li><a>Home</a></li>
+      <li><a href="">About</a></li>
+      <li><a href="">News</a></li>
+      <li><a href="">Services</a></li>
+      
+    </ul>
+  </div>
+</div>
