landing and sign up page added

--- a/front-end/frontEnd/src/app/header/header.component.html
+++ b/front-end/frontEnd/src/app/header/header.component.html
@@ -8,8 +8,8 @@
       <ul class="unCollapsed">
           <li><a class="nav1" routerLink="HomeBody">Home</a></li>
           <li><a class="nav1" routerLink="About">About</a></li>
-          <li><a class="nav1">Contact</a></li>
-          <li><a class="nav1">Servics</a></li>
+          <li><a class="nav1" routerLink="landing-page">Contact</a></li>
+          <li><a class="nav1" routerLink="Sign-up">Servics</a></li>
       </ul>
   </nav>
 </header>
