--- a/front-end/frontEnd/src/app/home-body/home-body.component.html
+++ b/front-end/frontEnd/src/app/home-body/home-body.component.html
@@ -13,6 +13,7 @@
       placeholder="Search for a drug"
       (input)="changeSearchValue($event)"
     />
+
     <span class="input-group-btn">
       <button type="submit" class="btn btn-default">
         <span class="glyphicon glyphicon-search"></span>
@@ -21,6 +22,9 @@
     <div class="button"><button>Search</button></div>
   </div>
 </form>
+<!-- <div class="workSpace">
+  {{ data.value }}
+</div> -->
 <section class="Eacc-section">
   <div class="Eacc__section-wrapper">
     <p class="Eacc-header">Medical drugs</p>
