with some new components

--- a/front-end/frontEnd/src/app/about/about.component.html
+++ b/front-end/frontEnd/src/app/about/about.component.html
@@ -1,89 +1,106 @@
-
- <section class="Eacc-section">
+<app-header></app-header>
+<section class="Eacc-section">
   <div class="Eacc__section-wrapper">
-      <p class="Eacc-intro">About Us</p>
-      <h1 class="Eacc-header">Med Hub  </h1>
-      <p class="Eacc-description"> The biggest motivation behind this particular project is the problems we observe frequently in our society: the needlessly tiresome process of
-         purchasing drugs that are prescribed by a physician. More often than not, many types of drugs are not found in the health center’ pharmacy where the drug was prescribed and
-         this results in the long tiring process of going to many other pharmacies to look for that particular drug, and as anybody can imagine,this process takes time, even days. Sometimes,
-          people might end up without finding the drug at all. This is mainly because there is no way of knowing which kind of drug is found in which pharmacy beforehand. Noticing this deficiency in
-          communication got us thinking of a solution we can provide to solve it. This drive of ours to find a solution to this problem paved the way for the birth of this project. The core idea of this website is to create
-          a digital system where people can search for a prescribed drug and find which pharmacy it can be found without actually going through the tiring process of looking for it. <br> Although this is the core idea behind our website,
-          The main customers of the project/software are pharmacies. That is, in addition to the market we drive their way, we also intend to offer a sophisticated database management system. Pharmacies will be hugely benefited from having access
-           to a fully-fledged database on their hands just by the use of a mobile phone on our responsive site or on any desktop, provided they are authenticated. Other means of accessing the database will also be possible. This way, they will have
-           a full knowledge of what medicines they have on their hands. Additionally, we also provide a way for pharmacies to build their brand and advertise their services. As you know, establishing a well-known pharmacy will take time and we intend
-           to help grow their businesses by advertising and promoting their services on tour pages and on search results.
-      </p>
-
+    <p class="Eacc-intro">About Us</p>
+    <h1 class="Eacc-header">Med Hub</h1>
+    <p class="Eacc-description">
+      The biggest motivation behind this particular project is the problems we
+      observe frequently in our society: the needlessly tiresome process of
+      purchasing drugs that are prescribed by a physician. More often than not,
+      many types of drugs are not found in the health center’ pharmacy where the
+      drug was prescribed and this results in the long tiring process of going
+      to many other pharmacies to look for that particular drug, and as anybody
+      can imagine,this process takes time, even days. Sometimes, people might
+      end up without finding the drug at all. This is mainly because there is no
+      way of knowing which kind of drug is found in which pharmacy beforehand.
+      Noticing this deficiency in communication got us thinking of a solution we
+      can provide to solve it. This drive of ours to find a solution to this
+      problem paved the way for the birth of this project. The core idea of this
+      website is to create a digital system where people can search for a
+      prescribed drug and find which pharmacy it can be found without actually
+      going through the tiring process of looking for it. <br />
+      Although this is the core idea behind our website, The main customers of
+      the project/software are pharmacies. That is, in addition to the market we
+      drive their way, we also intend to offer a sophisticated database
+      management system. Pharmacies will be hugely benefited from having access
+      to a fully-fledged database on their hands just by the use of a mobile
+      phone on our responsive site or on any desktop, provided they are
+      authenticated. Other means of accessing the database will also be
+      possible. This way, they will have a full knowledge of what medicines they
+      have on their hands. Additionally, we also provide a way for pharmacies to
+      build their brand and advertise their services. As you know, establishing
+      a well-known pharmacy will take time and we intend to help grow their
+      businesses by advertising and promoting their services on tour pages and
+      on search results.
+    </p>
   </div>
 </section>
 <h3 class="servics">servics</h3>
 <!-- ######## section one ends Here  #######-->
 
-
-
 <!-- ######## section two starts Here (vision and mission)  #######-->
 
 <div class="visionMission-section">
   <div class="visionMission__section-wrapper basic-flex">
-
-      <div class="Mission-container">
-
-          <img src="https://images.squarespace-cdn.com/content/v1/5a4ec105e9bfdfd7a247017c/1568914398131-QZJKV3UXTYCWH8941L30/QNI19_Website_Banner_September_3.jpg?format=1000w">
-          <div class="Mission-texts">
-              <ul class="Mission-description">
-                  <li>
-                      Increasing Satisfaction of our customers
-                  </li>
-                  <li>
-                      Widening Market Opportunities for pharamacies
-                  </li>
-                  <li>creating database system for our customers</li>
-                  <li>reducing the gap between users and pharmacies</li>
-
-
-              </ul>
-
-          </div>
-
-      </div>
-      <div class="Vision-container">
-          <img src="https://images.squarespace-cdn.com/content/v1/5a4ec105e9bfdfd7a247017c/1568914398131-QZJKV3UXTYCWH8941L30/QNI19_Website_Banner_September_3.jpg?format=1000w" alt="this is our Vision">
-          <div class="vision-texts">
-              <ul class="vision-description">
-                  <li>
-                      Increasing Satisfaction of our website users
-                  </li>
-                  <li>
-                      making users to get drug easily
-                  </li>
-                  <li>allowing users to order drugs</li>
-                  <li>users will get the drug in minimum distance from their postion</li>
-              </ul>
-
-          </div>
-
+    <div class="Mission-container">
+      <img
+        src="https://images.squarespace-cdn.com/content/v1/5a4ec105e9bfdfd7a247017c/1568914398131-QZJKV3UXTYCWH8941L30/QNI19_Website_Banner_September_3.jpg?format=1000w"
+      />
+      <div class="Mission-texts">
+        <ul class="Mission-description">
+          <li>Increasing Satisfaction of our customers</li>
+          <li>Widening Market Opportunities for pharamacies</li>
+          <li>creating database system for our customers</li>
+          <li>reducing the gap between users and pharmacies</li>
+        </ul>
       </div>
     </div>
-    <section class="Companies-section">
-      <div class="Companies__section-wrapper">
-          <h1 class="Companies-header">Campanies</h1>
-          <p class="Companies-title">Working with us</p>
-          <div class="Companies-content-flex1 basic-flex">
-              <div class="Company">
-                  <img src="https://img.freepik.com/premium-vector/hospital-building-isolated-modern-medical-clinic-center-clipart_101884-663.jpg?w=2000" alt=" hospitals">
-                  <span>Hosipitals</span>
-              </div>
-              <div class="Company">
-                  <img src="https://previews.123rf.com/images/juliarstudio/juliarstudio1603/juliarstudio160302802/54172169-hospital-building-icon-in-cartoon-style-on-a-white-background.jpg" alt="clinic">
-                  <span>Clinic centers</span>
-              </div>
-              <div class="Company">
-                  <img src="https://previews.agefotostock.com/previewimage/medibigoff/aadfe7ff23d88cb9efec6b56a0cfb46f/esy-056671234.jpg" alt="pharmacies">
-                  <span>Pharmacies</span>
-              </div>
-          </div>
+    <div class="Vision-container">
+      <img
+        src="https://images.squarespace-cdn.com/content/v1/5a4ec105e9bfdfd7a247017c/1568914398131-QZJKV3UXTYCWH8941L30/QNI19_Website_Banner_September_3.jpg?format=1000w"
+        alt="this is our Vision"
+      />
+      <div class="vision-texts">
+        <ul class="vision-description">
+          <li>Increasing Satisfaction of our website users</li>
+          <li>making users to get drug easily</li>
+          <li>allowing users to order drugs</li>
+          <li>
+            users will get the drug in minimum distance from their postion
+          </li>
+        </ul>
       </div>
-    </section>
+    </div>
+  </div>
+  <section class="Companies-section">
+    <div class="Companies__section-wrapper">
+      <h1 class="Companies-header">Campanies</h1>
+      <p class="Companies-title">Working with us</p>
+      <div class="Companies-content-flex1 basic-flex">
+        <div class="Company">
+          <img
+            src="https://img.freepik.com/premium-vector/hospital-building-isolated-modern-medical-clinic-center-clipart_101884-663.jpg?w=2000"
+            alt=" hospitals"
+          />
+          <span>Hosipitals</span>
+        </div>
+        <div class="Company">
+          <img
+            src="https://previews.123rf.com/images/juliarstudio/juliarstudio1603/juliarstudio160302802/54172169-hospital-building-icon-in-cartoon-style-on-a-white-background.jpg"
+            alt="clinic"
+          />
+          <span>Clinic centers</span>
+        </div>
+        <div class="Company">
+          <img
+            src="https://previews.agefotostock.com/previewimage/medibigoff/aadfe7ff23d88cb9efec6b56a0cfb46f/esy-056671234.jpg"
+            alt="pharmacies"
+          />
+          <span>Pharmacies</span>
+        </div>
+      </div>
+    </div>
+  </section>
 
-
+  <app-footer></app-footer>
+</div>
