--- a/front-end/frontEnd/src/app/landing-page/landing-page.component.html
+++ b/front-end/frontEnd/src/app/landing-page/landing-page.component.html
@@ -1,16 +1,33 @@
-
+<app-header></app-header>
 <section class="hero-section" id="hero">
-
   <div class="wave">
-
-    <svg width="100%" height="355px" viewBox="0 0 1920 355" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-      <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-        <g id="Apple-TV" transform="translate(0.000000, -402.000000)" fill="#FFFFFF">
-          <path d="M0,439.134243 C175.04074,464.89273 327.944386,477.771974 458.710937,477.771974 C654.860765,477.771974 870.645295,442.632362 1205.9828,410.192501 C1429.54114,388.565926 1667.54687,411.092417 1920,477.771974 L1920,757 L1017.15166,757 L0,757 L0,439.134243 Z" id="Path"></path>
+    <svg
+      width="100%"
+      height="355px"
+      viewBox="0 0 1920 355"
+      version="1.1"
+      xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+    >
+      <g
+        id="Page-1"
+        stroke="none"
+        stroke-width="1"
+        fill="none"
+        fill-rule="evenodd"
+      >
+        <g
+          id="Apple-TV"
+          transform="translate(0.000000, -402.000000)"
+          fill="#FFFFFF"
+        >
+          <path
+            d="M0,439.134243 C175.04074,464.89273 327.944386,477.771974 458.710937,477.771974 C654.860765,477.771974 870.645295,442.632362 1205.9828,410.192501 C1429.54114,388.565926 1667.54687,411.092417 1920,477.771974 L1920,757 L1017.15166,757 L0,757 L0,439.134243 Z"
+            id="Path"
+          ></path>
         </g>
       </g>
     </svg>
-
   </div>
 
   <div class="container">
@@ -19,21 +36,58 @@
         <div class="row">
           <div class="col-lg-8 text-center text-lg-start">
             <h1 data-aos="fade-right">Welcome to MedHUB</h1>
-            <p class="mb-5" data-aos="fade-right" data-aos-delay="100">Use our app and we will help you
-              find your desired medicine in your nearby location.
+            <p class="mb-5" data-aos="fade-right" data-aos-delay="100">
+              Use our app and we will help you find your desired medicine in
+              your nearby location.
             </p>
-            <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="#" class="btn btn-outline-white">Continue as a casual User</a></p>
-            <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="#" class="btn btn-outline-white">Pharmacy Owner</a></p>
-            <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="#" class="btn btn-outline-white">Sign up</a></p>
-            <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="#" class="btn btn-outline-white">Login</a></p>
-
+            <p
+              data-aos="fade-right"
+              data-aos-delay="200"
+              data-aos-offset="-500"
+            >
+              <a routerLink="HomeBody" href="#" class="btn btn-outline-white"
+                >Continue as a casual User</a
+              >
+            </p>
+            <p
+              data-aos="fade-right"
+              data-aos-delay="200"
+              data-aos-offset="-500"
+            >
+              <a routerLink="login" href="#" class="btn btn-outline-white"
+                >Pharmacy Owner</a
+              >
+            </p>
+            <p
+              data-aos="fade-right"
+              data-aos-delay="200"
+              data-aos-offset="-500"
+            >
+              <a routerLink="Sign-up" href="#" class="btn btn-outline-white"
+                >Sign up</a
+              >
+            </p>
+            <p
+              data-aos="fade-right"
+              data-aos-delay="200"
+              data-aos-offset="-500"
+            >
+              <a routerLink="Login" href="#" class="btn btn-outline-white"
+                >Login</a
+              >
+            </p>
           </div>
           <div class="col-lg-4 iphone-wrap">
-            <img src="http://atlas-content-cdn.pixelsquid.com/stock-images/blue-white-capsule-pill-qv2A0R5-600.jpg" alt="Image" class="phone-1" data-aos="fade-right">
+            <img
+              src="http://atlas-content-cdn.pixelsquid.com/stock-images/blue-white-capsule-pill-qv2A0R5-600.jpg"
+              alt="Image"
+              class="phone-1"
+              data-aos="fade-right"
+            />
           </div>
         </div>
       </div>
     </div>
   </div>
-
 </section>
+<app-footer></app-footer>
