--- a/front-end/frontEnd/src/app/search-result/search-result.component.html
+++ b/front-end/frontEnd/src/app/search-result/search-result.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container py-5">
   <!-- For demo purpose -->
   <!-- https://bootstrapious.com/i/snippets/sn-cards/shoes-1_gthops.jpg -->
@@ -187,3 +188,4 @@
     </div>
   </div>
 </div>
+<app-footer></app-footer>
