--- a/front-end/frontEnd/src/app/sign-up/sign-up.component.html
+++ b/front-end/frontEnd/src/app/sign-up/sign-up.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <section class="intro">
   <div class="mask d-flex align-items-center h-100 gradient-custom">
     <div class="container">
@@ -6,26 +8,51 @@
           <div class="card">
             <div class="card-body p-4 p-md-5">
               <h3 class="mb-4 pb-2">MedHUB</h3>
-              <form class="row g-3 needs-validation row-gap-3 ms-1 me-1" novalidate>
+              <form
+                class="row g-3 needs-validation row-gap-3 ms-1 me-1"
+                novalidate
+              >
                 <div class="col-md-4">
-                  <label for="validationCustom01" class="form-label">First name</label>
-                  <input type="text" class="form-control" id="validationCustom01" placeholder="MED" required>
-                  <div class="valid-feedback">
-                    Looks good!
-                  </div>
+                  <label for="validationCustom01" class="form-label"
+                    >First name</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="validationCustom01"
+                    placeholder="MED"
+                    required
+                  />
+                  <div class="valid-feedback">Looks good!</div>
                 </div>
                 <div class="col-md-4">
-                  <label for="validationCustom02" class="form-label">Last name</label>
-                  <input type="text" class="form-control" id="validationCustom02" placeholder="HUB" required>
-                  <div class="valid-feedback">
-                    Looks good!
-                  </div>
+                  <label for="validationCustom02" class="form-label"
+                    >Last name</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="validationCustom02"
+                    placeholder="HUB"
+                    required
+                  />
+                  <div class="valid-feedback">Looks good!</div>
                 </div>
                 <div class="col-md-4">
-                  <label for="validationCustomUsername" class="form-label">Username</label>
+                  <label for="validationCustomUsername" class="form-label"
+                    >Username</label
+                  >
                   <div class="input-group has-validation">
-                    <span class="input-group-text" id="inputGroupPrepend">@</span>
-                    <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+                    <span class="input-group-text" id="inputGroupPrepend"
+                      >@</span
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="validationCustomUsername"
+                      aria-describedby="inputGroupPrepend"
+                      required
+                    />
                     <div class="invalid-feedback">
                       Please choose a username.
                     </div>
@@ -33,32 +60,57 @@
                 </div>
                 <div class="row">
                   <div class="col">
-                   <label for="validationCustomUsername" class="form-label">Email</label>
-                    <input type="text" class="form-control" placeholder="email" aria-label="email">
+                    <label for="validationCustomUsername" class="form-label"
+                      >Email</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="email"
+                      aria-label="email"
+                    />
                   </div>
                   <div class="col">
-                    <label for="validationCustomUsername" class="form-label">phone no</label>
-                    <input type="text" class="form-control" placeholder="phone no" aria-label="phone no">
+                    <label for="validationCustomUsername" class="form-label"
+                      >phone no</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="phone no"
+                      aria-label="phone no"
+                    />
                   </div>
                 </div>
                 <div class="row">
                   <div class="col">
-                    <label for="validationCustomUsername" class="form-label">pharmacy name</label>
-                    <input type="text" class="form-control" placeholder="pharmacy name" aria-label="name of pharmachy">
+                    <label for="validationCustomUsername" class="form-label"
+                      >pharmacy name</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="pharmacy name"
+                      aria-label="name of pharmachy"
+                    />
                   </div>
                   <div class="col">
-                    <label for="validationCustomUsername" class="form-label">location </label>
-                    <input type="text" class="form-control" placeholder="address" aria-label="Address">
+                    <label for="validationCustomUsername" class="form-label"
+                      >location
+                    </label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="address"
+                      aria-label="Address"
+                    />
                   </div>
                 </div>
-
-
               </form>
 
-
-
-      <button type="button" class="btn btn-primary pt-6" >sign in</button>
-
+              <button type="button" class="btn btn-primary pt-6">
+                sign in
+              </button>
             </div>
           </div>
         </div>
@@ -66,3 +118,4 @@
     </div>
   </div>
 </section>
+<app-footer></app-footer>
