--- a/front-end/frontEnd/src/app/home-body/footer/footer.component.html
+++ b/front-end/frontEnd/src/app/home-body/footer/footer.component.html
@@ -1,14 +1,14 @@
 <footer class="footer-section">
   <div class="footer__navigation basic-flex">
-      <div class="footer-col column-1">
+      <div class="footer-col ">
           <h1>Links</h1>
           <ul>
               <li><a routerLink="HomeBody">Home</a></li>
               <li><a routerLink="About">About</a></li>
-              <li><a >Services</a></li>
+              <li><a  routerLink="search-result">Services</a></li>
           </ul>
       </div>
-      <div class="footer-col column-2">
+      <div class="footer-col " 	>
           <h1>Contacts</h1>
           <ul>
               <li>
@@ -42,7 +42,7 @@
 
           </ul>
       </div>
-      <div class="footer-col column-3">
+      <div class="footer-col ">
           <h1>Address</h1>
           <ul>
               <li>Ethiopia</li>
@@ -56,3 +56,4 @@
   <h1 class="footer-company-name">MedHub</h1>
   <p class="copyRight">@copyright reserved 2023</p>
 </footer>
+
