--- a/front-end/frontEnd/src/app/about/about.component.css
+++ b/front-end/frontEnd/src/app/about/about.component.css
@@ -10,7 +10,7 @@
   font-weight: 800;
   text-align: center;
   margin: 1.75rem auto;
-  color: rgb(51, 189, 175);
+  /* color: rgb(51, 189, 175); */
 }
 .Eacc-description {
   line-height: 1.4rem;
@@ -26,7 +26,7 @@
   margin-top: 100px;
   font-size: 25px;
   font-weight: 400;
-  color:  rgb(51, 189, 175);
+  /* color:  rgb(51, 189, 175); */
 }
 .visionMission__section-wrapper {
   width: 100%;
@@ -85,7 +85,7 @@
 .Companies-header {
   font-size: 3.15rem;
   text-align: center;
-  color:  rgb(51, 189, 175);
+  /* color:  rgb(51, 189, 175); */
 }
 .Companies-title {
   text-align: center;
