--- a/front-end/frontEnd/src/app/header/header.component.html
+++ b/front-end/frontEnd/src/app/header/header.component.html
@@ -6,10 +6,12 @@
         <h1>Medhub</h1>
       </div>
       <ul class="unCollapsed">
-          <li><a class="nav1" routerLink="HomeBody">Home</a></li>
-          <li><a class="nav1" routerLink="About">About</a></li>
-          <li><a class="nav1" routerLink="landing-page">Contact</a></li>
-          <li><a class="nav1" routerLink="Sign-up">Servics</a></li>
+          <li><a class="nav1" routerLink="/HomeBody">Home</a></li>
+          <li><a class="nav1" routerLink="/About">About</a></li>
+          <li><a class="nav1" routerLink="/search-result">Servics</a></li>
       </ul>
   </nav>
+
 </header>
+
+
