--- a/front-end/frontEnd/src/app/home-body/home-body.component.css
+++ b/front-end/frontEnd/src/app/home-body/home-body.component.css
@@ -6,9 +6,9 @@
     margin-top: 1rem;
 
 }
-.firstpart{
-  color:rgb(51, 189, 175);
-}
+/* .firstpart{
+  color:rgb(37, 89, 231);
+} */
 .container img{
     width: 25%;
 }
@@ -20,7 +20,7 @@
   width: 100%;
   height:60% ;
   box-shadow: 0 0 6px 6px rgba(6, 77, 6, 0.1);
-  background-color: rgb(51, 189, 175);
+  background: linear-gradient(to bottom right, rgba(81, 193, 245, 0.404), rgba(41, 66, 252, 0.349));
   margin: 4.25rem auto;
   display: flex;
   align-items: center;
@@ -52,7 +52,7 @@
   font-weight: 800;
   text-align: center;
   margin: 1.75rem auto;
-  color: rgb(51, 189, 175);
+  /* color:rgb(37, 89, 231); */
 }
 .Eacc-description {
   line-height: 1.4rem;
@@ -90,7 +90,7 @@ form{
   margin: auto;
 }
 .button button{
-  background-color:rgb(51, 189, 175);
+  background-color:rgb(37, 89, 231);
   text-align: center;
   height: 100%;
   border-radius: 5px;
@@ -110,7 +110,7 @@ form{
   font-weight: 800;
   text-align: center;
   margin: 1.75rem auto;
-  color: rgb(51, 189, 175);
+  /* color:rgb(37, 89, 231); */
 }
 .Companies-title {
   text-align: center;
