--- a/front-end/frontEnd/src/app/landing-page/landing-page.component.html
+++ b/front-end/frontEnd/src/app/landing-page/landing-page.component.html
@@ -22,10 +22,9 @@
             <p class="mb-5" data-aos="fade-right" data-aos-delay="100">Use our app and we will help you
               find your desired medicine in your nearby location.
             </p>
-            <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="#" class="btn btn-outline-white">Continue as a casual User</a></p>
-            <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="#" class="btn btn-outline-white">Pharmacy Owner</a></p>
-            <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="#" class="btn btn-outline-white">Sign up</a></p>
-            <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="#" class="btn btn-outline-white">Login</a></p>
+            <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a routerLink="/HomeBody" class="btn btn-outline-white">Continue as a casual User</a></p>
+            <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a routerLink="/Sign-up" class="btn btn-outline-white">Pharmacy Owner</a></p>
+            <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a routerLink="/loginpage" class="btn btn-outline-white">Login</a></p>
 
           </div>
           <div class="col-lg-4 iphone-wrap">
