display pharmacies and display pending registration templates

--- a/front-end/frontEnd/src/app/admin-page/admin-display-pharmacies/admin-display-pharmacies.component.html
+++ b/front-end/frontEnd/src/app/admin-page/admin-display-pharmacies/admin-display-pharmacies.component.html
@@ -1,1 +1,32 @@
-<p>admin-display-pharmacies works!</p>
+<app-header></app-header>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">pharmacy name</th>
+      <th scope="col">location</th>
+      <th scope="col">managers name</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>saint mark</td>
+      <td>6kilo</td>
+      <td>Fkrnew Birhanu</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>betasada</td>
+      <td>4kilo</td>
+      <td>Firaol Ibrahim</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>abi</td>
+      <td>lebu</td>
+      <td>surafel workayew</td>
+    </tr>
+  </tbody>
+</table>
+<app-footer></app-footer>
