added the managers component

--- a/front-end/frontEnd/src/app/admin-page/admin-page.component.html
+++ b/front-end/frontEnd/src/app/admin-page/admin-page.component.html
@@ -40,7 +40,11 @@
       >
         <div class="icon-box">
           <div class="icon"><i class="ri-palette-line"></i></div>
-          <h4 class="title"><a href="">Pending registration</a></h4>
+          <h4 class="title">
+            <a routerLink="/adminDisplayPendingRegistation"
+              >Pending registration</a
+            >
+          </h4>
           <p class="description">
             View pending registations waiting to be approved
           </p>
