--- a/front-end/frontEnd/src/app/login/login.component.html
+++ b/front-end/frontEnd/src/app/login/login.component.html
@@ -23,15 +23,12 @@
                   </h4>
                 </div>
 
-                <form
-                  (submit)="
-                    onSubmit(username.value, password.value, pharmacyID.value)
-                  "
-                >
+                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                   <p>Please login to your account</p>
 
                   <div class="form-outline mb-4">
                     <input
+                      formControlName="ID"
                       type="text"
                       class="form-control"
                       placeholder="Pharmacy ID"
@@ -45,6 +42,7 @@
 
                   <div class="form-outline mb-4">
                     <input
+                      formControlName="username"
                       type="email"
                       class="form-control"
                       placeholder="username"
@@ -58,6 +56,7 @@
 
                   <div class="form-outline mb-4">
                     <input
+                      formControlName="password"
                       type="password"
                       class="form-control"
                       placeholder="password"
@@ -72,6 +71,7 @@
                   <div class="text-center pt-1 mb-5 pb-1">
                     <button
                       type="submit"
+                      [disabled]="loginForm.invalid"
                       class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
                     >
                       Log in
