--- a/front-end/frontEnd/src/app/home-body/home-body.component.css
+++ b/front-end/frontEnd/src/app/home-body/home-body.component.css
@@ -1,26 +1,29 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 1rem;
-
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
 }
 /* .firstpart{
   color:rgb(37, 89, 231);
 } */
-.container img{
-    width: 25%;
+.container img {
+  width: 25%;
 }
-.input-group{
+.input-group {
   margin-bottom: 60px;
 }
 
-.news__section-rightside{
+.news__section-rightside {
   width: 100%;
-  height:60% ;
+  height: 60%;
   box-shadow: 0 0 6px 6px rgba(6, 77, 6, 0.1);
-  background: linear-gradient(to bottom right, rgba(81, 193, 245, 0.404), rgba(41, 66, 252, 0.349));
+  background: linear-gradient(
+    to bottom right,
+    rgba(81, 193, 245, 0.404),
+    rgba(41, 66, 252, 0.349)
+  );
   margin: 4.25rem auto;
   display: flex;
   align-items: center;
@@ -28,7 +31,6 @@
   gap: 3rem;
   padding: 10px 0 10px 40px;
   border-radius: 50px;
-
 }
 
 .news__section-rightside {
@@ -43,7 +45,7 @@
   width: 70%;
   margin: 5px auto 5px auto;
 }
-.Eacc-section{
+.Eacc-section {
   padding: 3px;
   margin: 5px auto 5px auto;
 }
@@ -67,7 +69,6 @@
 
 .news__section-rightside::-webkit-scrollbar {
   width: 12px;
-
 }
 .news__section-rightside::-webkit-scrollbar-thumb {
   border-radius: 5px;
@@ -81,25 +82,24 @@
   border-radius: 2rem;
   margin-bottom: 1.5rem;
 }
-.med{
-  font-size:25px;
-  margin: 2rem ;
+.med {
+  font-size: 25px;
+  margin: 2rem;
 }
-form{
+form {
   width: 40%;
   margin: auto;
 }
-.button button{
-  background-color:rgb(37, 89, 231);
+.button button {
+  background-color: rgb(37, 89, 231);
   text-align: center;
   height: 100%;
   border-radius: 5px;
   width: 130px;
 }
-.Company:hover{
+.Company:hover {
   transform: scale(1.07);
   transition: 0.4s;
-
 }
 .Companies__section-wrapper {
   width: 80%;
@@ -121,7 +121,6 @@ form{
   margin-top: 2.5rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-
 }
 .Company {
   width: 220px;
@@ -161,9 +160,8 @@ form{
   border: 1px solid #9c9a9a;
   text-align: left;
   padding: 15px 5px;
-
 }
-@media only screen and (max-width: 550px){
+@media only screen and (max-width: 550px) {
   .Companies-content-flex1 {
     gap: 1.75rem;
     margin-top: 2.5rem;
@@ -171,19 +169,14 @@ form{
     grid-template-columns: 1fr;
     text-align: center;
     margin-left: 30%;
-
   }
-
 }
 
-@media only screen and (min-width: 551px) and (max-width: 860px){
+@media only screen and (min-width: 551px) and (max-width: 860px) {
   .Companies-content-flex1 {
     gap: 1.75rem;
     margin-top: 2.5rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
-
-
   }
-
 }
