--- a/front-end/frontEnd/src/app/login/login.component.html
+++ b/front-end/frontEnd/src/app/login/login.component.html
@@ -23,7 +23,8 @@
                   </h4>
                 </div>
 
-                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                <form [formGroup]="loginForm">
+                  <!--(ngSubmit)="onSubmit()"-->
                   <p>Please login to your account</p>
 
                   <div class="form-outline mb-4">
@@ -70,11 +71,18 @@
 
                   <div class="text-center pt-1 mb-5 pb-1">
                     <button
-                      type="submit"
+                      (click)="onSubmit('administrators')"
                       [disabled]="loginForm.invalid"
                       class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
                     >
-                      Log in
+                      Log in as admin
+                    </button>
+                    <button
+                      (click)="onSubmit('employees')"
+                      [disabled]="loginForm.invalid"
+                      class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
+                    >
+                      Log in as emplooye
                     </button>
                   </div>
                 </form>
