--- a/front-end/frontEnd/src/app/manager-page/manager-page.component.html
+++ b/front-end/frontEnd/src/app/manager-page/manager-page.component.html
@@ -1,1 +1,82 @@
-<p>{{ data }}</p>
+<!-- ======= Hero Section ======= -->
+<app-header></app-header>
+<section id="hero" class="d-flex align-items-center">
+  <div
+    class="container position-relative"
+    data-aos="fade-up"
+    data-aos-delay="100"
+  >
+    <div class="row justify-content-center">
+      <div class="col-xl-7 col-lg-9 text-center">
+        <h1>welcome to MEDHUB</h1>
+        <h2>We are team passionate engineers</h2>
+      </div>
+    </div>
+    <div class="text-center">
+      <a class="btn-get-started scrollto">Get Started</a>
+    </div>
+
+    <div class="row icon-boxes">
+      <div
+        class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0"
+        data-aos="zoom-in"
+        data-aos-delay="200"
+      >
+        <div class="icon-box">
+          <div class="icon"><i class="ri-stack-line"></i></div>
+          <h4 class="title">
+            <a routerLink="/adminDisplayPharmacies">Pharmacies</a>
+          </h4>
+          <p class="description">
+            View the current data of pharmacies using MEDHUB
+          </p>
+        </div>
+      </div>
+
+      <div
+        class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0"
+        data-aos="zoom-in"
+        data-aos-delay="300"
+      >
+        <div class="icon-box">
+          <div class="icon"><i class="ri-palette-line"></i></div>
+          <h4 class="title">
+            <a routerLink="/displayMedicines">view stock</a>
+          </h4>
+          <p class="description">
+            see the current state of the medicines in your pharmacy
+          </p>
+        </div>
+      </div>
+
+      <div
+        class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0"
+        data-aos="zoom-in"
+        data-aos-delay="400"
+      >
+        <div class="icon-box">
+          <div class="icon"><i class="ri-command-line"></i></div>
+          <h4 class="title">
+            <a routerLink="/updateStock">update the stock</a>
+          </h4>
+          <p class="description">
+            add or reduce the numbers of existing medicines
+          </p>
+        </div>
+      </div>
+
+      <div
+        class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0"
+        data-aos="zoom-in"
+        data-aos-delay="500"
+      >
+        <div class="icon-box">
+          <div class="icon"><i class="ri-fingerprint-line"></i></div>
+          <h4 class="title"><a routerLink="/addMedicine">add Medicine</a></h4>
+          <p class="description">add a new medicine to your database</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<app-footer></app-footer>
