--- a/front-end/frontEnd/src/app/search-result/search-result.component.html
+++ b/front-end/frontEnd/src/app/search-result/search-result.component.html
@@ -23,6 +23,7 @@
     <div type="submit" class="button"><button>Search</button></div>
   </div>
 </form>
+<!-- <p>{{ this.results.medicine }}</p> -->
 
 <div class="container py-5">
   <!-- For demo purpose -->
@@ -32,8 +33,8 @@
   <div class="row">
     <!-- *ngFor="let result of medicines" -->
     <div
-      *ngFor="let result of results"
-      (click)="toDetail(result.ID)"
+      *ngFor="let result of this.result"
+      (click)="toDetail(result.id)"
       class="col-lg-8 mx-auto"
     >
       <!-- List group-->
@@ -46,12 +47,12 @@
               <h5 class="mt-0 font-weight-bold mb-2"></h5>
               {{ result.name }}
               <p class="font-italic text-muted mb-0 small">
-                Pharmacy:{{ result.pharmacy }}
+                Pharmacy:{{ result.pharmacyName }}
               </p>
               <div
                 class="d-flex align-items-center justify-content-between mt-1"
               >
-                <h6 class="font-weight-bold my-2">{{ result.price }}$</h6>
+                <h6 class="font-weight-bold my-2">{{ result.id }}$</h6>
                 <!--{{ medicine.price }} -->
                 <ul class="list-inline small">
                   <li class="list-inline-item m-0">
